--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <!-- nav bar end -->
 
             <!-- honda cbr part start -->
-            <div class="container custom_margin">
+            <div class="container custom_padding">
                 <div class="row d-flex align-items-center">
                     <div class="col-12 col-md-6 honda_dec">
                         <span>Computer-controlled digital transistorized with electronic advance</span>
@@ -90,7 +90,30 @@
     </header>
 
 
-    <main></main>
+    <main>
+        <!-- features part start -->
+        <section>
+            <div class="container custom_padding features">
+                <h1>Fetured Bikes 2021</h1>
+                <span>Best bike collection</span>
+                <hr>
+                <div class="row">
+                    <div class="col-12 col-md-4 p-3">
+                        <img src="images/bike-1.png" class="img-fluid" alt="...">
+                    </div>
+                    <div class="col-12 col-md-4  p-3">
+                         <img src="images/bike-2.png" class="img-fluid" alt="...">
+                    </div>
+                    <div class="col-12 col-md-4  p-3">
+                         <img src="images/bike-3.png" class="img-fluid" alt="...">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- features part end -->
+
+    </main>
+
     <footer></footer>
 
 
