--- a/index.html
+++ b/index.html
@@ -94,23 +94,65 @@
         <!-- features part start -->
         <section>
             <div class="container custom_padding features">
-                <h1>Fetured Bikes 2021</h1>
+                <h1>Fetured Bikes 2022</h1>
                 <span>Best bike collection</span>
                 <hr>
-                <div class="row">
+                <div class="row mt-5">
                     <div class="col-12 col-md-4 p-3">
-                        <img src="images/bike-1.png" class="img-fluid" alt="...">
+                        <img src="images/header-bike.png" class="img-fluid" alt="...">
                     </div>
                     <div class="col-12 col-md-4  p-3">
-                         <img src="images/bike-2.png" class="img-fluid" alt="...">
+                         <img src="images/feature-bike.jpg" class="img-fluid" alt="...">
                     </div>
                     <div class="col-12 col-md-4  p-3">
-                         <img src="images/bike-3.png" class="img-fluid" alt="...">
+                         <img src="images/header-bike.png" class="img-fluid" alt="...">
                     </div>
                 </div>
             </div>
         </section>
         <!-- features part end -->
+
+        <!-- latest news part start -->
+        <section>
+            <div class="container custom_padding">
+                <h1 class="news_title mb-5">Latest News</h1>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                      <div class="card p-3">
+                        <img src="images/bike-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Ducati XDIAVEL S-73</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                          <button type="button" class="btn btn-danger ">Read More</button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card p-3">
+                        <img src="images/bike-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Motorcycles & Scooters</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                          <button type="button" class="btn btn-danger ">Read More</button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card p-3">
+                        <img src="images/bike-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">2021 Honda CBR500R</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                          <button type="button" class="btn btn-danger ">Read More</button>
+                        </div>
+                      </div>
+                    </div>
+                    
+                  </div>
+            </div>
+        </section>
+        <!-- latest news part end -->
+
 
     </main>
 
